force-app/main/default/objects/GameCard__c/GameCard__c.object-meta.xml
<CustomObject>
    <label>Game Card</label>
    <nameField>
        <displayFormat>GC-{000000}</displayFormat>
        <label>Game Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>