force-app/main/default/objects/GameCard__c/fields/Pile__c.field-meta.xml
<CustomField>
    <fullName>Pile__c</fullName>
    <label>Pile</label>
    <referenceTo>Pile__c</referenceTo>
    <relationshipLabel>Game Cards</relationshipLabel>
    <relationshipName>GameCards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>