force-app/main/default/objects/GameCard__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>